--- a/index.html
+++ b/index.html
@@ -193,35 +193,17 @@
             <section>
                 <h2 id="contact" class="h2 text-center">Contact</h2>
 
-                <div id="profile-linkedin" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View LinkedIn" target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a></div>
-                    <div class="col-md-10"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script><script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/sylvaindethier" data-format="click" data-text="Sylvain DETHIER"></script></div>
-                </div>
+                <a data-ga-label="View LinkedIn" target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a>
 
-                <div id="profile-viadeo" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Viadeo" target="_blank" href="//www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a></div>
-                    <div class="col-md-10"><div class="viadeo-profile-card" data-user-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-color="light" data-partner-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-icon="button" data-behaviour="onclick" data-language="fr"></div></div>
-                </div>
+                <a data-ga-label="View Viadeo" target="_blank" href="//www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a>
 
-                <div id="profile-github" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View GitHub" target="_blank" href="//github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a></div>
-                    <div class="col-md-10"><iframe src="//ghbtns.com/github-btn.html?user=sylvaindethier&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="20"></iframe></div>
-                </div>
+                <a data-ga-label="View GitHub" target="_blank" href="//github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a>
 
-                <div id="profile-twitter" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Twitter" target="_blank" href="//twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a></div>
-                    <div class="col-md-10"><a href="//twitter.com/sylvaindethier" class="twitter-follow-button" data-show-count="true" data-lang="fr">Suivre @sylvaindethier</a></div>
-                </div>
+                <a data-ga-label="View Twitter" target="_blank" href="//twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
 
-                <div id="profile-google-plus" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Google+" target="_blank" href="//plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a></div>
-                    <div class="col-md-10"><div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/109446707283044652498" data-rel="author"></div></div>
-                </div>
+                <a data-ga-label="View Google+" target="_blank" href="//plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a>
 
-                <div id="contact-email" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="Write email button" target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default glow"><i class="fa fa-fw fa-envelope"></i> Email</a></div>
-                    <div class="col-md-10"><a data-ga-label="Write email link" target="_blank" href="mailto:dethiersylvain@gmail.com">dethiersylvain [at] gmail.com</a></div>
-                </div>
+                <a data-ga-label="Write email" target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default glow"><i class="fa fa-fw fa-envelope"></i> Email</a>
             </section>
         </div><!-- #main .container -->
 
@@ -243,29 +225,13 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-<script>
-/* Google Analytics */
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-48020170-2', 'sylvaindethier.github.io'); ga('require', 'displayfeatures'); ga('send', 'pageview');
-jQuery(document).ready(function($){
-    /* analytics.js track events */
-    $('[data-ga-label]').on('click', function () {
-        // do things w/ `data-ga-label`
-        ga('send', 'event', 'link', 'click', $(this).attr('data-ga-label'));
-    });
-});
-
-/* Viadeo profile */
-var viadeoWidgetsJsUrl=document.location.protocol+"//widgets.viadeo.com";(function(){var e=document.createElement('script');e.type='text/javascript';e.async=true;e.src=viadeoWidgetsJsUrl+'/js/viadeowidgets.js';var s=document.getElementsByTagName('head')[0];s.appendChild(e);})();
-
-/* Twitter button */
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-
-/* Google Plus */
-window.___gcfg={lang:'fr'};(function(){var po=document.createElement('script');po.type='text/javascript';po.async=true;po.src='https://apis.google.com/js/platform.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(po,s);})();
-</script>
+        <script>
+        /* Google Analytics */
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m);})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create','UA-48020170-2','sylvaindethier.github.io');ga('require','displayfeatures');ga('send','pageview');
+        jQuery(document).ready(function($){
+            /* analytics.js track events */$('[data-ga-label]').on('click',function(){ga('send','event','link','click',$(this).attr('data-ga-label'));});
+        });
+        </script>
     </body>
 </html>
