--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
                 <h1>Développeur PHP Symfony, JavaScript, Web app</h1>
 
                 <p class="lead">
-                    <span class="label label-success"><span class="glyphicon glyphicon-ok"></span> &nbsp; Actuellement à l'écoute du marché</span>
-                    <span class="hidden label label-danger"><span class="glyphicon glyphicon-remove"></span> &nbsp; Actuellement non disponible</span>
+                    <!--
+                    <span class="hidden label label-success"><span class="glyphicon glyphicon-ok"></span> &nbsp; Actuellement à l'écoute du marché</span>
+                    -->
+                    <span class="label label-danger"><span class="glyphicon glyphicon-remove"></span> &nbsp; Actuellement non disponible</span>
                     &nbsp;
+                    <!--
                     <a class="label label-default glow" data-ga-label="Download PDF" target="_blank" href="/documents/CV-Sylvain-Dethier.pdf" title="Mise à jour avril 2014"><span class="glyphicon glyphicon-download"></span> &nbsp; Télécharger le PDF</a>
+                    -->
                 </p>
             </section>
 
@@ -115,35 +119,40 @@
                 <h2 class="h2 text-center">Expériences</h2>
                 <div class="section-unit">
                     <h3 class="h3 row"><span class="col-md-4 text-left">Développeur web Symfony 2</span>
-                        <span class="col-md-8 text-right">Qobuz, CDI, mai 2013 - juillet 2013, 3 mois</span></h3>
+                        <!-- <span class="col-md-8 text-right">Qobuz, CDI, mai 2013 - juillet 2013, 3 mois</span></h3> -->
+                        <span class="col-md-8 text-right">Qobuz, CDI, janvier 2014 - avril 2014, 4 mois</span></h3>
                     <h4 class="h4">Symfony 2 Doctrine, FOSCommentBundle, JMSSerializerBundle, JavaScript (jQuery, Handlebars), SOA REST, Git/Github.</h4>
                     <p class="desc">Réimplantation du système des commentaires en widget, mise en oeuvre et développement de l’API (SOA, REST) et du bundle spécifique (Controller as Service, Dependency injection).<br>Implémentation et développement d’un outil de calcul d’indice de performance des albums.<br>Maintenance et évolution de l’existant en Symfony 1.4.</p>
                 </div>
 
                 <div class="section-unit">
                     <h3 class="h3 row"><span class="col-md-4 text-left">Développeur web JavaScript</span>
-                        <span class="col-md-8 text-right">ZenPro, CDD télétravail, novembre 2012 - mars 2013, 5 mois</span></h3>
+                        <!-- <span class="col-md-8 text-right">ZenPro, CDD télétravail, novembre 2012 - mars 2013, 5 mois</span></h3> -->
+                        <span class="col-md-8 text-right">ZenPro, CDD télétravail, juin 2013 - décembre 2013, 6 mois</span></h3>
                     <h4 class="h4">HTML5, CSS3, Bootstrap, JavaScript, Websocket, Ace editor, jQuery, Bootstrap, Git/GitHub.</h4>
                     <p class="desc">Collaboration à la conception et au développement d'un éditeur de code source, application web collaborative utilisant une communication via Websockets (éditeur type Codiad, Codebox, Koding, Cloud9).</p>
                 </div>
 
                 <div class="section-unit">
                     <h3 class="h3 row"><span class="col-md-4 text-left">Développeur web PHP Zend</span>
-                        <span class="col-md-8 text-right">Inovia Team (prestation Panda Services), CDI, août 2012 - octobre 2012, 3 mois</span></h3>
+                        <!-- <span class="col-md-8 text-right">Inovia Team (prestation Panda Services), CDI, août 2012 - octobre 2012, 3 mois</span></h3> -->
+                        <span class="col-md-8 text-right">Inovia Team (prestation Panda Services), CDI, janvier 2013 - mai 2013, 5 mois</span></h3>
                     <h4 class="h4">PHP 5.3, Zend 1.x, PostgreSQL, JavaScript, jQuery, ExtJS, SVN.</h4>
                     <p class="desc">Maintenance et évolution sur deux applications BigData (publicité en ligne, énergie de bâtiment): calcul et affichage texte et graphe d'indicateurs, d'indices, de performances.</p>
                 </div>
 
                 <div class="section-unit">
                     <h3 class="h3 row"><span class="col-md-4 text-left">Développeur web Symfony 2</span>
-                        <span class="col-md-8 text-right">EvoReso, cofondateur, juin 2011 - juin 2012, 12 mois</span></h3>
+                        <!-- <span class="col-md-8 text-right">EvoReso, cofondateur, juin 2011 - juin 2012, 12 mois</span></h3> -->
+                        <span class="col-md-8 text-right">EvoReso, cofondateur, juillet 2011 - décembre 2012, 18 mois</span></h3>
                     <h4 class="h4">PHP 5.4, Symfony 2 Doctrine, MySQL, JavaScript, jQuery, Bootstrap, REST SOA, Git/Github.</h4>
                     <p class="desc">Analyse des besoins, conception technique et fonctionnelle d'un portail d'organisation d'événemments par thèmes (rencontres, meetings, salons, etc) incluant la gestion des lieux, des participants, des dates, des périodicités.</p>
                 </div>
 
                 <div class="section-unit">
                     <h3 class="h3 row"><span class="col-md-4 text-left">Développeur web symfony 1.4</span>
-                        <span class="col-md-8 text-right">Formastreet, CDI, octobre 2010 - avril 2011, 7 mois</span></h3>
+                        <!-- <span class="col-md-8 text-right">Formastreet, CDI, octobre 2010 - avril 2011, 7 mois</span></h3> -->
+                        <span class="col-md-8 text-right">Formastreet, CDI, octobre 2010 - juin 2011, 9 mois</span></h3>
                     <h4 class="h4">PHP 5.2, Symfony 1.4 Doctrine, Symfony 1.4 Doctrine, PostgreSQL, jQuery, jQuery UI, ExtJS, SVN, Git/Github.</h4>
                     <p class="desc">Prise en charge complète et responsable technique des serveurs et applications. L’objectif était de recibler, maintenir, et faire évoluer les outils applicatifs pour une utilisation quotidienne pertinente par rapport aux besoins du métier. Développement d’une solution de suivis de relation, fidélité, facturation, emailing des clients.</p>
                 </div>
